# image_filters_projections_and-slice

./: 2Dfilter  3Dfilter  CMakeLists.txt  LICENSE  README.md  team-members.csv
executable/: advanced_programming_group_dijkstra  main_2Dfilter  main_3Dfilter  main_3Dprojection  main_3Dslicing
src/: Filter.cpp  Filter.h  Image.cpp  Image.h  Projection.cpp  Projection.h  Slice.cpp  Slice.h  Volume.cpp  Volume.h  demo.cpp  main.cpp  main_2D.cpp  main_3D.cpp  main_3Dfilter.cpp  main_3Dprojection.cpp  main_3Dslicing.cpp  main_Projection.cpp  test.cpp  test_slice.cpp  utils.h
tests/: Tests.h  test.cpp
